Switch to URL from URI