@@ -25,7 +25,6 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
 import java.net.Socket;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.ByteBuffer;
@@ -203,8 +202,8 @@ public class InfluxDB implements AutoCloseable {
             + "&p=" + URLEncoder.encode(password, "utf8")
             + "&q=create+database+" + URLEncoder.encode(name, "utf8");
 
-            final URI uri = new URI(protocol.toString(), null, URLEncoder.encode(host, "utf8"), port, "/query", query, null);
-            final HttpURLConnection httpConnection = (HttpURLConnection) uri.toURL().openConnection();
+            final URL uri = new URL(protocol.toString(), host, port, "/query?" + query);
+            final HttpURLConnection httpConnection = (HttpURLConnection) uri.openConnection();
             httpConnection.setConnectTimeout((int) SECONDS.toMillis(5));
             httpConnection.setRequestMethod("POST");
             httpConnection.setRequestProperty("Host", InetAddress.getLocalHost().getHostName());
@@ -385,7 +384,7 @@ public class InfluxDB implements AutoCloseable {
 
             query = query + "&" + String.join("&", queryParameters);
 
-            return new URI(protocol.toString(), null, URLEncoder.encode(host, "utf8"), port, path, query, null).toURL();
+            return new URL(protocol.toString(), host, port, path + "?" + query);
          }
          catch (final Exception e) {
             throw new RuntimeException(e);
